[gd_scene load_steps=6 format=3 uid="uid://dpm5bc7orq4k5"]

[ext_resource type="Texture2D" uid="uid://bqyiejvmgn51d" path="res://assets/title.png" id="1_kf5j0"]
[ext_resource type="Script" path="res://title.gd" id="1_xmchd"]
[ext_resource type="AudioStream" uid="uid://keqsasajbfcr" path="res://assets/sound/papa pizza eater title screen.mp3" id="3_bc7b4"]
[ext_resource type="PackedScene" path="res://credits_scene.tscn" id="4_u1nf6"]
[ext_resource type="Texture2D" uid="uid://bxjuolp54bp1m" path="res://assets/jamlogo.png" id="5_44byc"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xmchd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(424, 256)
texture = ExtResource("1_kf5j0")

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D"]
offset_left = -232.0
offset_right = 152.0
offset_bottom = 192.0

[node name="Play" type="Button" parent="Sprite2D/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="minigame" type="Button" parent="Sprite2D/VBoxContainer"]
layout_mode = 2
text = "Minigame
"

[node name="Credits" type="Button" parent="Sprite2D/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Jamlogo" type="Sprite2D" parent="Sprite2D/VBoxContainer"]
position = Vector2(458, 174)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_44byc")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bc7b4")
autoplay = true

[node name="credits_scene" parent="." instance=ExtResource("4_u1nf6")]
visible = false

[connection signal="button_up" from="Sprite2D/VBoxContainer/Play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="Sprite2D/VBoxContainer/minigame" to="." method="_on_minigame_button_up"]
[connection signal="button_up" from="Sprite2D/VBoxContainer/Credits" to="." method="_on_credits_button_up"]
